# lexian

./: Cargo.toml  README.md
.github/workflows/: configuration.json  release.yml
src/: input-examples.txt  main.rs
src/analyzer/: mod.rs
src/examples/: input1.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
src/grammar/: grammar.rs  mod.rs
