[package]
name = "lexian"
version = "1.0.0"
authors = ["Topiltzin Hernández Mares <nokoayzack@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A tool to lexicaly analyze a grammar and a given set of inputs."
readme = "README.md"
homepage = "https://github.com/Topi99/lexian"
repository = "https://github.com/Topi99/lexian"
keywords = ["lexical analyzer", "context-free grammar", "chomsky"]
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
